--- a/train_example.ipynb
+++ b/train_example.ipynb
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +116,8 @@
     "            label += 1\n",
     "    else:\n",
     "        raise Exception(\"Unknown mode.\")\n",
-    "\n",
+    "        \n",
+    "    print(classes)\n",
     "    # Convert to Tensor\n",
     "    imagepaths = tf.convert_to_tensor(imagepaths, dtype=tf.string)\n",
     "    labels = tf.convert_to_tensor(labels, dtype=tf.int32)\n",
@@ -144,9 +145,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['daisy', 'dandelion', 'roses', 'sunflowers', 'tulips']\n"
+     ]
+    }
+   ],
    "source": [
     "# -----------------------------------------------\n",
     "# THIS IS A CLASSIC CNN (see examples, section 3)\n",
@@ -168,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,23 +215,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Step 100, Minibatch Loss= 1.0997, Training Accuracy= 0.641\n",
-      "Step 200, Minibatch Loss= 0.8315, Training Accuracy= 0.734\n",
-      "Step 300, Minibatch Loss= 0.5991, Training Accuracy= 0.766\n",
-      "Step 400, Minibatch Loss= 0.5252, Training Accuracy= 0.812\n",
-      "Step 500, Minibatch Loss= 0.3171, Training Accuracy= 0.875\n",
-      "Step 600, Minibatch Loss= 0.3644, Training Accuracy= 0.906\n",
-      "Step 700, Minibatch Loss= 0.1386, Training Accuracy= 1.000\n",
-      "Step 800, Minibatch Loss= 0.1419, Training Accuracy= 0.984\n",
-      "Step 900, Minibatch Loss= 0.1778, Training Accuracy= 0.984\n",
-      "Step 1000, Minibatch Loss= 0.0550, Training Accuracy= 0.984\n",
+      "Step 100, Minibatch Loss= 1.1381, Training Accuracy= 0.500\n",
+      "Step 200, Minibatch Loss= 1.0824, Training Accuracy= 0.516\n",
+      "Step 300, Minibatch Loss= 0.9192, Training Accuracy= 0.641\n",
+      "Step 400, Minibatch Loss= 0.7287, Training Accuracy= 0.734\n",
+      "Step 500, Minibatch Loss= 0.5583, Training Accuracy= 0.750\n",
+      "Step 600, Minibatch Loss= 0.4472, Training Accuracy= 0.922\n",
+      "Step 700, Minibatch Loss= 0.4557, Training Accuracy= 0.875\n",
+      "Step 800, Minibatch Loss= 0.2675, Training Accuracy= 0.906\n",
+      "Step 900, Minibatch Loss= 0.2451, Training Accuracy= 0.906\n",
+      "Step 1000, Minibatch Loss= 0.1980, Training Accuracy= 0.984\n",
       "Optimization Finished!\n"
      ]
     }
@@ -280,6 +289,13 @@
     "    coord.request_stop()\n",
     "    coord.join(threads)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
