--- a/inference_example.ipynb
+++ b/inference_example.ipynb
@@ -29,7 +29,9 @@
     "N_CLASSES = 5 # CHANGE HERE, total number of classes\n",
     "IMG_HEIGHT = 64 # CHANGE HERE, the image height to be resized to\n",
     "IMG_WIDTH = 64 # CHANGE HERE, the image width to be resized to\n",
-    "CHANNELS = 3 # The 3 color channels, change to 1 if grayscale"
+    "CHANNELS = 3 # The 3 color channels, change to 1 if grayscale\n",
+    "\n",
+    "classes = ['daisy', 'dandelion', 'roses', 'sunflowers', 'tulips']"
    ]
   },
   {
@@ -38,23 +40,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Network Parameters\n",
-    "dropout = 0.75 # Dropout, probability to keep units\n",
-    "\n",
-    "# Build the data input\n",
-    "#X, Y = read_images(DATASET_PATH, MODE, batch_size)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "# Create model\n",
-    "def conv_net(x, n_classes, dropout, reuse, is_training):\n",
+    "def conv_net(x, n_classes, reuse, is_training):\n",
     "    # Define a scope for reusing the variables\n",
-    "    with tf.variable_scope('ConvNet'):\n",
+    "    with tf.variable_scope('ConvNet', reuse=reuse):\n",
     "\n",
     "        # Convolution Layer with 32 filters and a kernel size of 5\n",
     "        conv1 = tf.layers.conv2d(x, 32, 5, activation=tf.nn.relu)\n",
@@ -72,7 +61,7 @@
     "        # Fully connected layer (in contrib folder for now)\n",
     "        fc1 = tf.layers.dense(fc1, 1024)\n",
     "        # Apply Dropout (if is_training is False, dropout is not applied)\n",
-    "        fc1 = tf.layers.dropout(fc1, rate=dropout, training=is_training)\n",
+    "#        fc1 = tf.layers.dropout(fc1, rate=dropout, training=is_training)\n",
     "\n",
     "        # Output layer, class prediction\n",
     "        out = tf.layers.dense(fc1, n_classes)\n",
@@ -85,11 +74,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "INPUT_PATH = 'flower_photos/tulips/3213012716_b4c0f7db88.jpg'\n",
+    "INPUT_PATH = 'flower_photos/tulips/100930342_92e8746431_n.jpg'\n",
     "# Read images from disk\n",
     "image = tf.read_file(INPUT_PATH)\n",
     "image = tf.image.decode_jpeg(image, channels=CHANNELS)\n",
@@ -106,18 +95,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "logits_test = conv_net(X_input, N_CLASSES, dropout, reuse=True, is_training=False)\n",
-    "pred = tf.argmax(logits_test, 1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -129,40 +110,27 @@
     }
    ],
    "source": [
-    "#new_saver = tf.train.import_meta_graph(MODEL_PATH + '.meta')\n",
-    "#new_saver.restore(sess, MODEL_PATH)\n",
-    "#import numpy as np\n",
-    "#images = tf.placeholder(tf.float32, shape=(1, IMG_HEIGHT, IMG_WIDTH, CHANNELS))\n",
-    "#rand = np.random.rand(1, IMG_HEIGHT, IMG_WIDTH, 3).astype(np.float32)\n",
+    "#tf.reset_default_graph()\n",
+    "#tf.get_variable_scope().reuse_variables()\n",
     "\n",
     "with tf.Session() as sess:\n",
-    "        sess.run(tf.global_variables_initializer())\n",
-    "        new_saver = tf.train.import_meta_graph(MODEL_PATH + '.meta')\n",
-    "        new_saver.restore(sess, MODEL_PATH)\n",
-    "        probs, prediction = sess.run([logits_test, pred]) #, feed_dict={images: rand}))\n",
-    "        print('done')"
+    "    logits_test = conv_net(X_input, N_CLASSES, reuse=tf.AUTO_REUSE, is_training=False)\n",
+    "    pred = tf.argmax(logits_test, 1)\n",
+    "    sess.run(tf.global_variables_initializer())\n",
+    "    new_saver = tf.train.import_meta_graph(MODEL_PATH + '.meta')\n",
+    "    new_saver.restore(sess, MODEL_PATH)\n",
+    "    probs, prediction = sess.run([logits_test, pred]) #, feed_dict={images: rand}))\n",
+    "    print('done')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[0.26701853, 0.17883359, 0.1611265 , 0.25675556, 0.13626577]],\n",
-       "      dtype=float32)"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "prediction\n",
-    "probs"
+    "print(\"label: \", classes[prediction[0]])\n",
+    "print(\"probabilities: \", probs)"
    ]
   },
   {
