--- a/inference_example.ipynb
+++ b/inference_example.ipynb
@@ -74,11 +74,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "INPUT_PATH = 'flower_photos/tulips/100930342_92e8746431_n.jpg'\n",
+    "INPUT_PATH = 'flower_photos/tulips/10164073235_f29931d91e.jpg'\n",
     "# Read images from disk\n",
     "image = tf.read_file(INPUT_PATH)\n",
     "image = tf.image.decode_jpeg(image, channels=CHANNELS)\n",
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
     "scrolled": true
    },
@@ -125,9 +125,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "label:  tulips\n",
+      "probabilities:  [[0.13103297 0.17657484 0.28488863 0.1147337  0.29276985]]\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"label: \", classes[prediction[0]])\n",
     "print(\"probabilities: \", probs)"
