--- a/inference_example.ipynb
+++ b/inference_example.ipynb
@@ -9,7 +9,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/usr/local/lib/python2.7/dist-packages/h5py/__init__.py:36: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
+      "/usr/local/lib/python3.5/dist-packages/h5py/__init__.py:36: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
       "  from ._conv import register_converters as _register_converters\n"
      ]
     }
@@ -31,7 +31,7 @@
     "IMG_WIDTH = 64 # CHANGE HERE, the image width to be resized to\n",
     "CHANNELS = 3 # The 3 color channels, change to 1 if grayscale\n",
     "\n",
-    "classes = ['daisy', 'dandelion', 'roses', 'sunflowers', 'tulips']"
+    "classes = ['daisy', 'dandelion', 'roses', 'sunflowers', 'tulips']\n"
    ]
   },
   {
@@ -74,54 +74,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "INPUT_PATH = 'flower_photos/tulips/10164073235_f29931d91e.jpg'\n",
-    "# Read images from disk\n",
-    "image = tf.read_file(INPUT_PATH)\n",
-    "image = tf.image.decode_jpeg(image, channels=CHANNELS)\n",
-    "\n",
-    "# Resize images to a common size\n",
-    "image = tf.image.resize_images(image, [IMG_HEIGHT, IMG_WIDTH])\n",
-    "\n",
-    "# Normalize\n",
-    "image = image * 1.0/127.5 - 1.0\n",
-    "\n",
-    "X_input = tf.reshape(image, [1, IMG_HEIGHT, IMG_WIDTH, CHANNELS])\n",
-    "#X = image.reshape(1, IMG_HEIGHT, IMG_WIDTH, CHANNELS)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {
-    "scrolled": true
-   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "INFO:tensorflow:Restoring parameters from saved/my_tf_model\n",
-      "done\n"
+      "Restored\n",
+      "done\n",
+      "[-0.6078 -0.2471 -0.1216]\n",
+      "4\n"
      ]
     }
    ],
    "source": [
-    "#tf.reset_default_graph()\n",
-    "#tf.get_variable_scope().reuse_variables()\n",
     "\n",
-    "with tf.Session() as sess:\n",
+    "with tf.Graph().as_default() as g:\n",
+    "    INPUT_PATH = 'flower_photos/tulips/10164073235_f29931d91e.jpg'\n",
+    "    # Read images from disk\n",
+    "    image = tf.read_file(INPUT_PATH)\n",
+    "    image = tf.image.decode_jpeg(image, channels=CHANNELS)\n",
+    "\n",
+    "    # Resize images to a common size\n",
+    "    image = tf.image.resize_images(image, [IMG_HEIGHT, IMG_WIDTH])\n",
+    "\n",
+    "    # Normalize\n",
+    "    image = image * 1.0/127.5 - 1.0\n",
+    "\n",
+    "    X_input = tf.reshape(image, [1, IMG_HEIGHT, IMG_WIDTH, CHANNELS])\n",
+    "    #X = image.reshape(1, IMG_HEIGHT, IMG_WIDTH, CHANNELS)\n",
     "    logits_test = conv_net(X_input, N_CLASSES, reuse=tf.AUTO_REUSE, is_training=False)\n",
     "    pred = tf.argmax(logits_test, 1)\n",
-    "    sess.run(tf.global_variables_initializer())\n",
-    "    new_saver = tf.train.import_meta_graph(MODEL_PATH + '.meta')\n",
-    "    new_saver.restore(sess, MODEL_PATH)\n",
-    "    probs, prediction = sess.run([logits_test, pred]) #, feed_dict={images: rand}))\n",
-    "    print('done')"
+    "\n",
+    "#tf.reset_default_graph()\n",
+    "#tf.get_variable_scope().reuse_variables()\n",
+    "   \n",
+    "    with tf.Session() as sess:\n",
+    "        saver = tf.train.Saver() \n",
+    "        ckpt = tf.train.get_checkpoint_state(\"saved\")\n",
+    "        if ckpt and ckpt.model_checkpoint_path:\n",
+    "            saver.restore(sess, ckpt.model_checkpoint_path)\n",
+    "            print(\"Restored\")\n",
+    "        else:\n",
+    "            print(\"Error\")\n",
+    "#         new_saver = tf.train.import_meta_graph(MODEL_PATH + '.meta')\n",
+    "#         new_saver.restore(sess, MODEL_PATH)\n",
+    "#         sess.run(tf.global_variables_initializer())\n",
+    "#         logits_test = conv_net(X_input, N_CLASSES, reuse=tf.AUTO_REUSE, is_training=False)\n",
+    "#         pred = tf.argmax(logits_test, 1)\n",
+    "        x_input, probs, prediction = sess.run([X_input, logits_test, pred])\n",
+    "        print('done')\n",
+    "        print(x_input[0][0][0])\n",
+    "        print(prediction[0])\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -133,7 +147,7 @@
      "output_type": "stream",
      "text": [
       "label:  tulips\n",
-      "probabilities:  [[0.13103297 0.17657484 0.28488863 0.1147337  0.29276985]]\n"
+      "probabilities:  [[9.1512e-10 2.5767e-10 8.8524e-06 2.1594e-08 9.9999e-01]]\n"
      ]
     }
    ],
@@ -153,21 +167,21 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "pygments_lexer": "ipython3",
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
